flux/apps/immich/serivce-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    app: immich
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
