flux/apps/immich/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-service
  namespace: immich
spec:
  selector:
    app: immich
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
  type: ClusterIP
